# vscode-dev-containers

./: pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  pyDockerfile
