[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "webapp build on fastapi"
authors = ["Elephantatech <vivekm.mistry@gmail.com>"]
license = "apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-contrib = "^0.2.11"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
